[package]
name = "jupiter-phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
bytemuck = "1.13.0"
solana-sdk = "1.14.9"
solana-client = "1.14.9"
anyhow = "1.0"
spl-token = { version = "3.3.1", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
serde_json = "1.0.82"
serde = "1.0.140"
rust_decimal = "1.26.1"
anchor-lang = "0.26.0"
phoenix-v1 = { vesrion = "0.2.4", features = [ "no-entrypoint" ]} 
phoenix-sdk-core = "0.5.0"
jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation.git", rev = "1d02a43" }
jupiter = { git = "https://github.com/jup-ag/rust-amm-implementation.git", rev = "1d02a43" }